--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   greet:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
     steps:
       - name: asd
         run: npm install
