--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
   greet:
     runs-on: ubuntu-latest
     steps:
-      - name: asd
-        run: npm install
+#      - name: asd
+#        run: npm install
       - name: testasd
         run: npm run test
