--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
 #      - name: asd
 #        run: npm install
-      - name: testasd
+      - name: test
         run: npm run test
